force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Defines the type of account to distinguish its role or category.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Mobile Employee</fullName>
            </value>
            <value>
                <fullName>Internal Andersen</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Collaborating Firm</fullName>
            </value>
            <value>
                <fullName>Non-Collaborating Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>