force-app/main/default/objects/Account/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <externalId>true</externalId>
    <label>Client ID</label>
    <type>AutoNumber</type>
</CustomField>