force-app/main/default/objects/Account/fields/Client_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Legal_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>