force-app/main/default/objects/Account/fields/Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type__c</fullName>
    <label>Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Andersen</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
            <value>
                <fullName>Collaborating</fullName>
            </value>
            <value>
                <fullName>Non-Collaborating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>