force-app/main/default/objects/Account/fields/Global_Relationship_Director_Manager__c.field-meta.xml
<CustomField>
    <fullName>Global_Relationship_Director_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Relationship Director/Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>