force-app/main/default/objects/Account/fields/Global_Relationship_Partner__c.field-meta.xml
<CustomField>
    <fullName>Global_Relationship_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Relationship Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>