force-app/main/default/objects/Account/fields/Global_Relationship_Partner_Office__c.field-meta.xml
<CustomField>
    <fullName>Global_Relationship_Partner_Office__c</fullName>
    <formula>Global_Relationship_Partner__r.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Relationship Partner Office</label>
    <type>Text</type>
</CustomField>