force-app/main/default/objects/Account/fields/Main_Client_Relationship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Main_Client_Relationship_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Client Relationship Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>