force-app/main/default/objects/Account/fields/Office_Country__c.field-meta.xml
<CustomField>
    <fullName>Office_Country__c</fullName>
    <label>Office Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>