force-app/main/default/objects/Account/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <externalId>true</externalId>
    <label>Office ID</label>
    <type>AutoNumber</type>
</CustomField>