force-app/main/default/objects/Account/fields/Practice_Lead__c.field-meta.xml
<CustomField>
    <fullName>Practice_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary Andersen point of contact responsible for managing the relationship with the affiliate or member firm. This may include operational coordination, issue resolution, and facilitating collaboration across global engagements.</description>
    <label>Practice Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Practice_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>