force-app/main/default/objects/Account/fields/Practice_Managing_Partner__c.field-meta.xml
<CustomField>
    <fullName>Practice_Managing_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The senior-most executive at the affiliate or member firm responsible for overall governance, strategic direction, and decision-making. This field identifies the individual accountable for representing the firm within the Andersen global network.</description>
    <label>Practice Managing Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Practice_Managing_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>