force-app/main/default/objects/Account/fields/RelatedGroupId__c.field-meta.xml
<CustomField>
    <fullName>RelatedGroupId__c</fullName>
    <description>Stores the ID of the related public group for the Firm account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RelatedGroupId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>