force-app/main/default/objects/Account/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Tax</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>Employment Tax</fullName>
            </value>
            <value>
                <fullName>Calculate Payroll</fullName>
            </value>
            <value>
                <fullName>Deliver Payroll</fullName>
            </value>
            <value>
                <fullName>Permanent Establishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>