force-app/main/default/objects/Account/fields/Share_Mobile_with_Employer__c.field-meta.xml
<CustomField>
    <fullName>Share_Mobile_with_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Individual’s Mobile will be shared with any employers.</description>
    <label>Share Mobile with Employer</label>
    <type>Checkbox</type>
</CustomField>