force-app/main/default/objects/Account/fields/Share_Phone_with_Employer__c.field-meta.xml
<CustomField>
    <fullName>Share_Phone_with_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Individual’s Phone will be shared with any employers.</description>
    <label>Share Phone with Employer</label>
    <type>Checkbox</type>
</CustomField>