force-app/main/default/objects/Account/fields/Share_Primary_Email_with_Employer__c.field-meta.xml
<CustomField>
    <fullName>Share_Primary_Email_with_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Individual’s Primary Email will be shared with any employers.</description>
    <label>Share Primary Email with Employer</label>
    <type>Checkbox</type>
</CustomField>