force-app/main/default/objects/Account/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <description>Stores a truncated name of the Firm Account. Should be blank for non-Firm accounts.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ShortName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>