force-app/main/default/objects/Account/fields/Spouse_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Preferred_Name__c</fullName>
    <description>AGMPB-710</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Spouse Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>