force-app/main/default/objects/Account/recordTypes/Firm.recordType-meta.xml
<RecordType>
    <fullName>Firm</fullName>
    <active>true</active>
    <description>An entity that can serve as a Coordinating or Subscribing office</description>
    <label>Firm</label>
</RecordType>