force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>Identifies third-party vendors working for clients.</description>
    <label>Vendor</label>
</RecordType>