force-app/main/default/objects/Account/validationRules/Account_VR02_RequireFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_VR02_RequireFirstName</fullName>
    <active>true</active>
    <description>Jira: AGMPB-829</description>
    <errorConditionFormula>AND( 
     $CustomMetadata.DisableAutomation__mdt.Account.IsActiveValidationRule__c = True, 

$RecordType.Name = &quot;Individual&quot;, ISBLANK( FirstName ) )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Account_VR02: The First Name field must be populated</errorMessage>
</ValidationRule>