force-app/main/default/objects/Account/validationRules/Account_VR03_ShortNameOnFirmOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_VR03_ShortNameOnFirmOnly</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$CustomMetadata.DisableAutomation__mdt.Account.IsActiveValidationRule__c = True,
NOT(ISBLANK(ShortName__c)) &amp;&amp;
RecordType.DeveloperName &lt;&gt; &quot;Firm&quot;
)</errorConditionFormula>
    <errorDisplayField>ShortName__c</errorDisplayField>
    <errorMessage>Account_VR03: ShortName should only be populated for Firm accounts.</errorMessage>
</ValidationRule>