force-app/main/default/objects/Account/listViews/Firm_Accounts.listView-meta.xml
<ListView>
    <fullName>Firm_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Firm</value>
    </filters>
    <label>Firm Accounts</label>
</ListView>